<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.AddToDiaryActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_editor_add_to_diary"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/name" />


        <!-- Name field -->
        <TextView
            android:id="@+id/foodname_add_to_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_calories_add_to_diary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/calories" />
        <!-- Breed field -->
        <TextView
            android:id="@+id/food_calories_add_to_diary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/calories"
            android:padding="16dp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_size_add_to_diary"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/measurement" />

        <TextView
            android:id="@+id/foodsize_add_to_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="10dp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_quantity_add_to_diary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/quantity" />
        <!-- Breed field -->
        <EditText
            android:id="@+id/edit_quantity_add_to_diary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:importantForAutofill="no" />


    </LinearLayout>






<!--    <ImageView-->
<!--        android:id="@+id/image_add_to_diary"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:srcCompat="@android:drawable/ic_menu_report_image" />-->

<!--    <Button-->
<!--        android:id="@+id/add_pic_button_add_to_diary"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:text="Click to add picture"-->
<!--        android:textColor="#F73939" />-->

</LinearLayout>